tests/cases/modules/ok/package-cache-host-literals-main.ari
mod cache_host_literals;

fn main() -> i64 {
  cache_host_literals::string_score()
}
