tests/cases/modules/errors/cyclic-import-main.ari
mod cycle_a;

fn main() -> i64 {
  return 0;
}
